Changed how data are loaded (Online server optimalization), added selection for colors

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -30,6 +30,12 @@ label {
   color: #34495e;
 }
 
+.h_line {
+    border-top: 2px solid grey;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    width: 100%;
+}
 /*
   # CSS layout styles  ------------------------------------------------------------
 */
@@ -193,6 +199,13 @@ label {
   padding-right: 20%;
 }
 
+.splash-input-setting{
+  width: 100%;
+  margin-bottom: 5%;
+  margin-top: 5%;
+  padding-left: 35%;
+}
+
 .splash-input-3D-row:after{
   width: 90%;
   content: "";
@@ -293,6 +306,16 @@ label {
 /*
   # CSS MEDIA QUERIES  -------------------------------------------------------------------
 */
+  @media (min-width:20em) {
+    .splash-input-setting{
+      padding-left: 32%;
+    }
+  }
+  @media (min-width:35em) {
+    .splash-input-setting{
+      padding-left: 0;
+    }
+  }
 
   @media (min-width:60em) {
 
@@ -315,6 +338,10 @@ label {
       width: 55%;
       height: 75%;
     }
+    .splash-input-setting{
+      padding-left: 22%;
+    }
+
 
     .splash-head {
       font-size: 250%;
