--- a/www/css/style.css
+++ b/www/css/style.css
@@ -214,11 +214,10 @@ label {
 
 .splash-head {
   font-size: 20px;
-  font-weight: bold;
   color: white;
   border: 3px solid white;
   padding: 1em 1.6em;
-  font-weight: 100;
+  font-weight: 100 bold;
   border-radius: 5px;
   line-height: 1em;
 }
@@ -333,8 +332,6 @@ label {
     }
     .splash-head-3D {
       font-size: 250%;
-    }
-    .table-3D{
     }
 
     .l-box-lrg {
