--- a/www/css/style.css
+++ b/www/css/style.css
@@ -36,6 +36,15 @@ label {
     margin-bottom: 2%;
     width: 100%;
 }
+
+img {
+  width: 50%;
+  height: 50%;
+  min-width: 150px;
+  max-width: 300px;
+  min-height: 200px;
+  max-height: 400px;
+}
 /*
   # CSS layout styles  ------------------------------------------------------------
 */
@@ -149,7 +158,7 @@ label {
 .splash {
   /* absolute center .splash within .splash-container */
     width: 80%;
-  height: 50%;
+  height: 95%;
   margin: auto;
   position: absolute;
   top: 100px; left: 0; bottom: 0; right: 0;
@@ -320,7 +329,7 @@ label {
 
     .splash {
       width: 65%;
-      height: 50%;
+      height: 95%;
     }
     .splash-3D {
       width: 55%;
