--- a/www/css/style.css
+++ b/www/css/style.css
@@ -40,10 +40,10 @@ label {
 img {
   width: 50%;
   height: 50%;
-  min-width: 150px;
-  max-width: 300px;
+  min-width: 200px;
+  max-width: 200px;
   min-height: 200px;
-  max-height: 400px;
+  max-height: 200px;
 }
 /*
   # CSS layout styles  ------------------------------------------------------------
@@ -313,7 +313,12 @@ img {
 /*
   # CSS MEDIA QUERIES  -------------------------------------------------------------------
 */
-
+  @media (min-height:600px){
+    img {
+  max-width: 400px;
+  max-height: 400px;
+}
+  }
   @media (min-width:60em) {
 
     body {
