--- a/www/css/style.css
+++ b/www/css/style.css
@@ -63,11 +63,14 @@ img {
 }
 .col-sm-10 {
   margin-right: 0;
+  background: black;
 }
 /*
   # CSS button  -------------------------------------------------------------------
 */
-
+.dropup .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
+  max-height: 400px;
+}
   .asga-button {
     background-color: #1f8dd6;
       color: white;
