removed not UTF-8 character

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,7 +2,7 @@
   ################################################################################
 # Shiny CSS
 #
-# (c) 2019 Müller-Reichert Lab & Robert Kiewisz
+# (c) 2019 Muller-Reichert Lab & Robert Kiewisz
 # This code is licensed under GPL V3.0 license (see LICENSE.txt for details)
 #
 # Author: Robert Kiewisz
